# Chemical-modeling

./: README.md
1/: 2D_reactor.cpp  2d.py  2d1d.py  2d2d.py  conc_change.py  concentration.py  crystals.py  crystals2.py  integrations.cpp  integrations.h  porous_animation.py  porous_concentration.py  random_placer.cpp  reaction_animation.py  runD3_radius.cpp  run_D2_2.cpp  run_D2_3.cpp  run_D3.cpp  run_integrations.cpp  run_porous.cpp  run_porous_scan.cpp  snapshot.py  statistics.py
10/: extract.py  gather.py  ml_enginering.py  pca_clustering1.py
2/: classical_oscillators.cpp  classical_oscillators.h  duffing.txt  duffing_plot.py  duffing_plot_v.py  maxwell.txt  prva_naloga.cpp  reactor.txt  reactor_plot.py  resonance.py  run_duffing.cpp  run_maxwell.cpp  walk_visual.py
3/: cleanup.cpp  diffusion_reaction.h  input.txt  linear_solvers.cpp  potential_well.cpp  potential_well2.cpp  random_walk.cpp  random_walk.h  reaction_anal.py  reaction_plot.py  reaction_plot_trends.py  reaction_profile.py  run_reactor_flux.cpp  run_reactor_isolated.cpp  run_reactor_profile.cpp  run_walk.cpp  walk_animation.py  walk_animation2.py  walk_movie.py  walk_statistics.py  walk_visual.py  well.py
4/: Michaelis_Menten_reactor.cpp  Michaelis_Menten_reactor.h  animation.py  block_neuman.cpp  block_poisson.cpp  block_robin.cpp  block_temperature.cpp  convection.py  convection2.py  heat_conduction.cpp  laplace.py  (+13 more)
random_box/: CMakeLists.txt  random_placer.cpp  random_placer.h  run_placer.cpp
random_box/headers/: random_placer.h
random_box/src/: random_placer.cpp  run_D2.cpp  run_D2_2.cpp
(+91 files in other folders)
